# preprocess-toolbox

./: .gitignore  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py
preprocess_toolbox/: __init__.py  base.py  cli.py  download.py  interface.py  models.py  preprocess.py  processor.py  utils.py
preprocess_toolbox/data/: amsr.py  cli.py  esgf.py  geo.py  osisaf.py  process.py  spatial.py  time.py
preprocess_toolbox/dataset/: __init__.py  cds.py  cli.py  cmip6.py  datasets.py  osisaf.py  process.py  spatial.py  time.py
preprocess_toolbox/loader/: cli.py  utils.py
preprocess_toolbox/meta/: cli.py  meta.py
preprocess_toolbox/metadata/: cli.py
preprocess_toolbox/ml/: cli.py
tests/: __init__.py  test_preprocess_toolbox.py
